--- a/Sparc.Blossom.Server/App.Typography.scss
+++ b/Sparc.Blossom.Server/App.Typography.scss
@@ -46,6 +46,40 @@
         font-size: 14px;
     }
 
+    @media only screen and (max-width: 800px) {
+        h1 {
+            font-size: 44px;
+        }
+
+        h2 {
+            font-size: 36px;
+        }
+
+        h3 {
+            font-size: 28px;
+        }
+
+        h4 {
+            font-size: 23px;
+        }
+
+        .title-1, .subtitle-1 {
+            font-size: 18px;
+        }
+
+        .title-2, .subtitle-2 {
+            font-size: 16px;
+        }
+
+        p.medium {
+            font-size: 16px;
+        }
+
+        p.small {
+            font-size: 14px;
+        }
+    }
+
     @media only screen and (max-width: 460px) {
         h1 {
             font-size: 44px;
