--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -35,7 +35,8 @@
         }
 
         .header {
-            width: 809px;
+            width: 100%;
+            max-width: 809px;
             margin: 0 auto;
             text-align: center;
             font-family: 'NimbusSansExtd', sans-serif;
@@ -76,7 +77,8 @@
         }
 
         .header {
-            width: 1054px;
+            width: 100%;
+            max-width: 1054px;
             margin: 0 auto;
             text-align: center;
             font-family: 'NimbusSansExtd', sans-serif;
@@ -92,7 +94,8 @@
         }
 
         .interactive-block {
-            width: 1054px;
+            width: 100%;
+            max-width: 1054px;
             height: 500px;
             margin: 0 auto;
             margin-top: 40px;
@@ -355,6 +358,249 @@
 
                 img {
                     width: 100%;
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 1100px) {
+        section.home--about {
+            padding-top: 80px;
+        }
+
+        &--about {
+            .feature {
+                margin: 60px 0;
+                gap: 60px;
+
+                .image-wrapper {
+                    img.feature-image {
+                        width: 310px;
+                        height: 310px;
+                    }
+                }
+
+                .content-wrapper {
+                    padding: 30px 0;
+                }
+            }
+
+            div:nth-child(4) {
+                margin-bottom: 30px;
+            }
+        }
+    }
+
+    @media only screen and (max-width: 800px) {
+        section {
+            width: 100%;
+            padding: 80px 0;
+        }
+
+        &--hero {
+            .hero--image {
+                width: 80%;
+                margin: 0 auto;
+                margin-bottom: 15px;
+                text-align: center;
+
+                img {
+                    width: 80%;
+                }
+            }
+
+            .header {
+                width: 100%;
+            }
+        }
+
+        .float-wrapper {
+            width: 100%;
+            position: relative;
+        }
+
+        &--intro {
+            width: 100%;
+            padding-bottom: 312px;
+            background: $background;
+
+            .header {
+                width: 100%;
+            }
+
+            .interactive-block {
+                width: 100%;
+                max-width: 650px;
+                height: 400px;
+                margin-top: 40px;
+                border-radius: 25px;
+
+                img {
+                    max-width: 400px;
+                }
+            }
+
+            .projectlogo-carousel {
+                margin: 0 -15px;
+                margin-top: 80px;
+                margin-bottom: 30px;
+                display: flex;
+                justify-content: space-between;
+                gap: 35px;
+                overflow: hidden;
+
+                img {
+                    height: 25px;
+                }
+            }
+        }
+
+        section.home--about {
+            padding: 0px;
+        }
+
+        &--about {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 50px;
+            background: $grey-200;
+            color: $grey-900;
+
+            .container {
+                height: 100%;
+                padding: 80px 20px;
+            }
+
+            .feature {
+                width: 100%;
+                height: 100%;
+                margin: 60px 0;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 0;
+
+                .image-wrapper {
+                    margin: 0 auto;
+
+                    img.feature-image {
+                        width: 200px;
+                        height: 200px;
+                    }
+                }
+
+                .content-wrapper {
+                    width: 100%;
+                    margin: 0 auto;
+                    padding: 0;
+                }
+
+                &.reverse {
+                    flex-direction: column;
+                }
+            }
+
+            div:nth-child(4) {
+                margin-bottom: 0;
+            }
+
+            .button-wrapper {
+                .learn-more {
+                    padding: 8px 35px;
+                    font-size: 18px;
+                }
+            }
+        }
+
+        &--projects {
+            .header {
+                margin-bottom: 60px;
+                padding: 0 20px;
+            }
+
+            .project-carousel {
+                .project-wrapper {
+                    justify-content: start;
+                    gap: 15px;
+
+                    &:first-child {
+                        padding-left: 20px;
+                    }
+
+
+                    .github-card {
+                        width: 100%;
+                        height: auto;
+                        padding-bottom: 9px;
+                        border-radius: 15px;
+
+                        img.project-photo {
+                            width: 200px;
+                            height: auto;
+                            margin: 10px;
+                            border-radius: 10px;
+                        }
+
+                        .github-wrapper {
+                            margin: 0 10px;
+
+                            img.github-logo {
+                                width: 20px;
+                                height: 20px;
+                            }
+                        }
+                    }
+                }
+
+                .arrows-container {
+                    width: 62px;
+                    height: 150px;
+                    top: 40px;
+
+                    img {
+                        height: 150px;
+                    }
+                }
+            }
+        }
+
+        section.home--cta {
+            padding: 0;
+            padding-top: 60px;
+        }
+
+        &--cta {
+            .container {
+                padding: 0 20px;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 0;
+                flex-wrap: nowrap;
+            }
+
+            .header {
+                width: 100%;
+
+                h3 {
+                    font-size: 28px;
+                }
+            }
+
+            .cta-input {
+                margin: auto 0;
+                gap: 15px;
+
+                input {
+                    width: 100%;
+                    height: 30px;
+                    padding: 0 25px;
+                    font-size: 16px;
+                }
+
+                button.sign-up {
+                    width: 36px;
+                    height: 36px;
                 }
             }
         }
