--- a/Sparc.Blossom.Server/Shared/NavMenu.scss
+++ b/Sparc.Blossom.Server/Shared/NavMenu.scss
@@ -63,7 +63,7 @@ nav {
             display: flex;
             margin: auto 0;
 
-            button.explore-blossom {
+            .explore-blossom {
                 margin-right: 20px;
                 padding: 2px 18px;
                 font-size: 13px;
