--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -36,6 +36,32 @@ body p.medium {
 body p.small {
   font-size: 14px;
 }
+@media only screen and (max-width: 800px) {
+  body h1 {
+    font-size: 44px;
+  }
+  body h2 {
+    font-size: 36px;
+  }
+  body h3 {
+    font-size: 28px;
+  }
+  body h4 {
+    font-size: 23px;
+  }
+  body .title-1, body .subtitle-1 {
+    font-size: 18px;
+  }
+  body .title-2, body .subtitle-2 {
+    font-size: 16px;
+  }
+  body p.medium {
+    font-size: 16px;
+  }
+  body p.small {
+    font-size: 14px;
+  }
+}
 @media only screen and (max-width: 460px) {
   body h1 {
     font-size: 44px;
@@ -158,7 +184,7 @@ nav .links-wrapper .explore-blossom {
     display: flex;
     margin: auto 0;
   }
-  nav .links-wrapper button.explore-blossom {
+  nav .links-wrapper .explore-blossom {
     margin-right: 20px;
     padding: 2px 18px;
     font-size: 13px;
@@ -233,7 +259,8 @@ footer .footer--column .column-links a {
   width: 551px;
 }
 .home--hero .header {
-  width: 809px;
+  width: 100%;
+  max-width: 809px;
   margin: 0 auto;
   text-align: center;
   font-family: "NimbusSansExtd", sans-serif;
@@ -267,7 +294,8 @@ footer .footer--column .column-links a {
   padding: 0 15px;
 }
 .home--intro .header {
-  width: 1054px;
+  width: 100%;
+  max-width: 1054px;
   margin: 0 auto;
   text-align: center;
   font-family: "NimbusSansExtd", sans-serif;
@@ -280,7 +308,8 @@ footer .footer--column .column-links a {
   margin-bottom: 8px;
 }
 .home--intro .interactive-block {
-  width: 1054px;
+  width: 100%;
+  max-width: 1054px;
   height: 500px;
   margin: 0 auto;
   margin-top: 40px;
@@ -507,6 +536,192 @@ footer .footer--column .column-links a {
 .home--cta .cta-input button.sign-up img {
   width: 100%;
 }
+@media only screen and (max-width: 1100px) {
+  .home section.home--about {
+    padding-top: 80px;
+  }
+  .home--about .feature {
+    margin: 60px 0;
+    gap: 60px;
+  }
+  .home--about .feature .image-wrapper img.feature-image {
+    width: 310px;
+    height: 310px;
+  }
+  .home--about .feature .content-wrapper {
+    padding: 30px 0;
+  }
+  .home--about div:nth-child(4) {
+    margin-bottom: 30px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .home section {
+    width: 100%;
+    padding: 80px 0;
+  }
+  .home--hero .hero--image {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  .home--hero .hero--image img {
+    width: 80%;
+  }
+  .home--hero .header {
+    width: 100%;
+  }
+  .home .float-wrapper {
+    width: 100%;
+    position: relative;
+  }
+  .home--intro {
+    width: 100%;
+    padding-bottom: 312px;
+    background: #020201;
+  }
+  .home--intro .header {
+    width: 100%;
+  }
+  .home--intro .interactive-block {
+    width: 100%;
+    max-width: 650px;
+    height: 400px;
+    margin-top: 40px;
+    border-radius: 25px;
+  }
+  .home--intro .interactive-block img {
+    max-width: 400px;
+  }
+  .home--intro .projectlogo-carousel {
+    margin: 0 -15px;
+    margin-top: 80px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap: 35px;
+    overflow: hidden;
+  }
+  .home--intro .projectlogo-carousel img {
+    height: 25px;
+  }
+  .home section.home--about {
+    padding: 0px;
+  }
+  .home--about {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 50px;
+    background: #D0CECD;
+    color: #140903;
+  }
+  .home--about .container {
+    height: 100%;
+    padding: 80px 20px;
+  }
+  .home--about .feature {
+    width: 100%;
+    height: 100%;
+    margin: 60px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+  }
+  .home--about .feature .image-wrapper {
+    margin: 0 auto;
+  }
+  .home--about .feature .image-wrapper img.feature-image {
+    width: 200px;
+    height: 200px;
+  }
+  .home--about .feature .content-wrapper {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .home--about .feature.reverse {
+    flex-direction: column;
+  }
+  .home--about div:nth-child(4) {
+    margin-bottom: 0;
+  }
+  .home--about .button-wrapper .learn-more {
+    padding: 8px 35px;
+    font-size: 18px;
+  }
+  .home--projects .header {
+    margin-bottom: 60px;
+    padding: 0 20px;
+  }
+  .home--projects .project-carousel .project-wrapper {
+    justify-content: start;
+    gap: 15px;
+  }
+  .home--projects .project-carousel .project-wrapper:first-child {
+    padding-left: 20px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card {
+    width: 100%;
+    height: auto;
+    padding-bottom: 9px;
+    border-radius: 15px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card img.project-photo {
+    width: 200px;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card .github-wrapper {
+    margin: 0 10px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card .github-wrapper img.github-logo {
+    width: 20px;
+    height: 20px;
+  }
+  .home--projects .project-carousel .arrows-container {
+    width: 62px;
+    height: 150px;
+    top: 40px;
+  }
+  .home--projects .project-carousel .arrows-container img {
+    height: 150px;
+  }
+  .home section.home--cta {
+    padding: 0;
+    padding-top: 60px;
+  }
+  .home--cta .container {
+    padding: 0 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+    flex-wrap: nowrap;
+  }
+  .home--cta .header {
+    width: 100%;
+  }
+  .home--cta .header h3 {
+    font-size: 28px;
+  }
+  .home--cta .cta-input {
+    margin: auto 0;
+    gap: 15px;
+  }
+  .home--cta .cta-input input {
+    width: 100%;
+    height: 30px;
+    padding: 0 25px;
+    font-size: 16px;
+  }
+  .home--cta .cta-input button.sign-up {
+    width: 36px;
+    height: 36px;
+  }
+}
 @media only screen and (max-width: 460px) {
   .home section {
     width: 100%;
@@ -677,18 +892,23 @@ footer .footer--column .column-links a {
 
 .guide {
   width: 100%;
-  padding: 0 188px;
-  padding-top: 125px;
+  max-width: 1038px;
+  padding: 125px 20px;
+  margin: 0 auto;
+  color: #FFFFFF;
 }
 .guide--hero {
-  width: 1039px;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
 }
 .guide--hero .header {
-  width: 809px;
   margin: 0 auto;
   font-family: "NimbusSansExtd", sans-serif;
+}
+.guide--hero .header p {
+  max-width: 705px;
+  margin: 0 auto;
 }
 .guide--hero .header h1 {
   margin-bottom: 10px;
@@ -701,8 +921,10 @@ footer .footer--column .column-links a {
   gap: 19px;
 }
 .guide--hero .ask-questions input {
-  width: 900px;
+  width: 90%;
+  max-width: 900px;
   height: 100px;
+  box-sizing: border-box;
   padding: 0 47px;
   border: 2px solid #F6F4F3;
   border-radius: 100px;
@@ -721,18 +943,51 @@ footer .footer--column .column-links a {
 .guide--hero .ask-questions button img {
   width: 100%;
 }
-.guide--categories .category {
+.guide .category {
   margin-bottom: 102px;
 }
-.guide--categories .category .subtitle-1 {
+.guide .category .subtitle-1 {
   font-family: "NimbusSans", sans-serif;
   color: #A19D9A;
 }
-.guide--categories .category h2 {
-  margin-bottom: 31px;
-  font-family: "NimbusSansExtd", sans-serif;
+.guide .category .guide--heading {
+  display: flex;
 }
-
+.guide .category img {
+  display: inline;
+  vertical-align: middle;
+  margin: 10px 30px 0 0;
+  align-self: self-start;
+}
+.guide .category h2 {
+  margin: 0;
+  font-family: "NimbusSansExtd", sans-serif;
+  cursor: pointer;
+  display: inline;
+}
+.guide--wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.guide--wrapper img {
+  width: 87px;
+  align-self: self-start;
+  cursor: pointer;
+  margin-top: 20%;
+}
+.guide--content {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #D0CECD;
+  border-radius: 20px;
+  padding: 60px;
+  box-sizing: border-box;
+  color: #000000;
+  display: none;
+}
+.guide--content.show-section {
+  display: block;
+}
 body {
   margin: 0;
   background: #020201;
